--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <h1>Hello Git</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda ab id
+      modi quos esse rerum similique rem eveniet nihil molestias culpa, harum
+      porro recusandae delectus possimus ipsam eum dicta voluptate?
+    </p>
   </body>
 </html>
